--- a/Dream Coding/반응형 헤더 만들기/index.html
+++ b/Dream Coding/반응형 헤더 만들기/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c9f0ad905f.js" crossorigin="anonymous"></script>
+    <script src="main.js" defer></script>
     <title>NAV_TEST1</title>
 </head>
 <body>
@@ -21,9 +22,24 @@
             <li><a href="">Bookings</a></li>
         </ul>
         <ul class="icons">
-            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-twitter" ></i>
             <i class="fa-brands fa-facebook-f"></i>
         </ul>
+
+        <a href="#" class="btn">
+            <i class="fa-solid fa-bars"></i>
+        </a>
     </nav>
 </body>
 </html>
+
+
+
+
+<!-- 
+TROUBLE SHOOTING
+
+Flex 적용이 안될 땐 display: flex 적용이 됐는지 확인하자
+font-awesome은 font 속성이 적용된다 
+모르겠을 땐 우선 적용해보고 고친다
+-->
