--- a/Dream Coding/YOUTUBE clone coding/index1.html
+++ b/Dream Coding/YOUTUBE clone coding/index1.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c9f0ad905f.js" crossorigin="anonymous"></script>
     <title>Youtube</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
             <i class="fab fa-youtube"></i>
             <span>Youtube</span>
         </div>
-        <div>
+        <div class="t_menu">
             <i class="fas fa-search"></i>
             <i class="fas fa-ellipsis-v"></i>
         </div>
@@ -27,12 +28,14 @@
     유튜브 링크 바로 넣어서 video tag 대신 iframe tag 사용
     -->
     <section class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/uHKfrz65KSU" title="YouTube video player"
-            frameborder="0"
+        <iframe class="player" width="560" height="315" src="https://www.youtube.com/embed/uHKfrz65KSU"
+            title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            allowfullscreen>
+        </iframe>
     </section>
-
+    
+    <div class="detailAndmore">
     <!--detail section -->
     <section class="detail">
         <ul class="tag">
@@ -44,12 +47,12 @@
             <span class="title">클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript</span>
             <button class="btn"><i class="fas fa-caret-down"></i></button>
         </div>
-        <span>3,289,259 view | 3 month ago</span>
+        <span class="views">3,289,259 view | 3 month ago</span>
 
 
         <!--icons section -->
         <ul class="icons">
-            <li><button><i class="fas fa-thumbs-up"></i><span>1K</span></button></li>
+            <li><button><i class="active fas fa-thumbs-up"></i><span>1K</span></button></li>
             <li><button><i class="fas fa-thumbs-down"></i><span>0</span></button></li>
             <li><button><i class="fas fa-share"></i><span>share</span></button></li>
             <li><button><i class="fas fa-plus"></i><span>Save</span></button></li>
@@ -59,9 +62,11 @@
         <!--channel section -->
         <div class="channel">
             <div class="thum">
-                <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg">
-                <span>CUTE CAT</span>
-                <span>구독자 63.1만명</span>
+                <img class="pic" src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492__340.jpg">
+                <div class="info">
+                    <span>CUTE CAT</span>
+                    <span class="sub_num">구독자 63.1만명</span>
+                </div>
             </div>
             <button class="sub">subscribe</button>
         </div>
@@ -69,32 +74,38 @@
 
     <!--more section-->
     <section class="more">
-        <span>다음 동영상</span>
-        <ul>
-            <li>
-                <img  src="https://cdn.pixabay.com/photo/2017/11/14/13/06/kitty-2948404__340.jpg">
-                <span>The cute cate is coming</span>
-                <span>CUTE CAT</span>
-                <span>76K views</span>
+        <span class="more_sub">다음 동영상</span>
+        <ul >
+            <li class="items">
+                <img src="https://cdn.pixabay.com/photo/2017/11/14/13/06/kitty-2948404__340.jpg">
+                <div class="info">
+                <span class="title">The cute cate is coming</span>
+                <span class="name">CUTE CAT</span>
+                <span class="views">76K views</span>
+            </div>
                 <button class="morebtn"><i class="fas fa-ellipsis-v"></i></button>
             </li>
-            <li>
-                <img  src="https://cdn.pixabay.com/photo/2019/11/08/11/56/kitten-4611189__340.jpg">
-                <span>Why she is so cute?</span>
-                <span>CUTE CAT</span>
-                <span>55K views</span>
+            <li class="items">
+                <img src="https://cdn.pixabay.com/photo/2019/11/08/11/56/kitten-4611189__340.jpg">
+                <div class="info">
+                <span class="title">Why she is so cute?</span>
+                <span class="name">CUTE CAT</span>
+                <span class="views">55K views</span>
+                </div>
                 <button class="morebtn"><i class="fas fa-ellipsis-v"></i></button>
             </li>
-            <li>
-                <img  src="https://cdn.pixabay.com/photo/2018/07/13/10/20/kittens-3535404__340.jpg">
-                <span>The cuty cats</span>
-                <span>CUTE CAT</span>
-                <span>82K views</span>
+            <li class="items">
+                <img src="https://cdn.pixabay.com/photo/2018/07/13/10/20/kittens-3535404__340.jpg">
+                <div class="info">
+                <span class="title">The cuty cats</span>
+                <span class="name">CUTE CAT</span>
+                <span class="views">82K views</span>
+                </div>
                 <button class="morebtn"><i class="fas fa-ellipsis-v"></i></button>
             </li>
         </ul>
     </section>
-
+    </div>
 
 </body>
 
