--- a/Frontend Mentor/product-preview-card-component-main/index.html
+++ b/Frontend Mentor/product-preview-card-component-main/index.html
@@ -13,15 +13,15 @@
   <title>Frontend Mentor | Product preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
 
 <div class="main">
-  <div class="img">
+  <div class="image">
     <img class="img" src="images/image-product-desktop.jpg" alt="perfume photo">
   </div>
   <div class="des">
@@ -38,10 +38,10 @@
       <span>for the House of CHANEL.</span>
     </div>
     <div>
-      <li class="cost">
-        <ul class="dis">$149.99</ul>
-        <ul class="ori">$169.99</ul>
-      </li>
+      <ul class="cost">
+        <il class="dis">$149.99</il>
+        <il class="ori">$169.99</il>
+      </ul>
     </div>
     <button class="btn"><img src="images/icon-cart.svg" alt="icon" class="svg">Add to cart</button>
   </div>
