--- a/Frontend Mentor/product-preview-card-component-main/index.html
+++ b/Frontend Mentor/product-preview-card-component-main/index.html
@@ -19,7 +19,6 @@
   </style> -->
 </head>
 <body>
-
 <div class="main">
   <div class="image">
     <img class="img" src="images/image-product-desktop.jpg" alt="perfume photo">
@@ -39,14 +38,14 @@
     </div>
     <div>
       <ul class="cost">
-        <il class="dis">$149.99</il>
-        <il class="ori">$169.99</il>
+        <li class="dis">$149.99</li>
+        <li class="ori">$169.99</li>
       </ul>
     </div>
     <button class="btn"><img src="images/icon-cart.svg" alt="icon" class="svg">Add to cart</button>
   </div>
 </div>
-  
+
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">sujeong.oh5</a>.
